Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2010-11-06 20:52:25 Europe/Berlin

0.004     2010-11-05 21:58:18 Europe/Berlin
	- Release for new Dist::Zilla::PluginBundle::GETTY

0.003     2010-11-04 19:36:08 Europe/Berlin

0.002     2010-11-04 03:09:19 Europe/Berlin

0.001     2010-11-04 03:04:48 Europe/Berlin