@@ -15,7 +15,7 @@ String::Truncate = 0
 MooseX::POE = 0.208
 MooseX::LogDispatch = 0
 MooseX::Getopt = 0
-POE::Component::FeedAggregator = 0
+POE::Component::FeedAggregator = 0.006
 WWW::Shorten = 0
 WWW::Shorten::Bitly = 0
 Text::Trim = 0
